--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-"Hello World!" 
+<html>
+	<head>
+		<title>FASY - Homepage</title>
+		<link rel="stylesheet" type="text/css" href="formatting.css">
+	</head>
+	
+	<body>
+	<div id="headerbar">
+		<h1>Flatline Automotive Scrap Yard</h1> 
+	</div>
+	<div id="navbar">
+	<ul id="menu">
+		<li><a href="index.html">Home</a></li>
+		<br>
+		<br>
+		<li><a href="Splash.png">WIP</a></li>
+		<br>
+		<br>
+		<li><a href="Splash.png">WIP</a></li>
+	</ul>
+	</div>
+	<div id="mainsection">
+		<p id="bodyheading"><img src="animLogo.gif" width="220" height="180"><br>Give us your crap, we sell it for scrap!</p>
+		<p id="bodytext">Here at Flatline Automotive Scrap Yard™, we are proud to have been serving customers for over <br>50 years.</p>
+		<br>
+		<p id="bodyheading"> Contact Information</p>
+		<ul>
+			<li>Phone Number: (02) 4499 8989</li>
+			<li>Address: 35 North Street, Bangalee Industrial Estate, 2541 NSW</li>
+			<li>Email: Flatline@Domain.com.au</li>
+		</ul>
+		<audio controls autoplay>
+			<source src="WebsiteLQ.wav" type="audio/wav">
+		</audio>
+	</div>
+	<div id="footerbar"><p>Copyright © FASY - Flatline Automotive Scrap Yard™ : 2015</p></div>
+	</body>
+</html>
