--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>FASY - Homepage</title>
@@ -21,7 +22,7 @@
 	</div>
 	<div id="mainsection">
 		<p id="bodyheading"><img src="animLogo.gif" width="220" height="180"><br>Give us your crap, we sell it for scrap!</p>
-		<p id="bodytext">Here at Flatline Automotive Scrap Yard™, we are proud to have been serving customers for over <br>50 years.</p>
+		<p id="bodytext">Here at Flatline Automotive Scrap Yardâ„¢, we are proud to have been serving customers for over <br>50 years.</p>
 		<br>
 		<p id="bodyheading"> Contact Information</p>
 		<ul>
@@ -33,6 +34,6 @@
 			<source src="WebsiteLQ.wav" type="audio/wav">
 		</audio>
 	</div>
-	<div id="footerbar"><p>Copyright © FASY - Flatline Automotive Scrap Yard™ : 2015</p></div>
+	<div id="footerbar"><p>Copyright Â© FASY - Flatline Automotive Scrap Yardâ„¢ : 2015</p></div>
 	</body>
 </html>
