--- a/index.html
+++ b/index.html
@@ -1,39 +1,67 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>FASY - Homepage</title>
-		<link rel="stylesheet" type="text/css" href="formatting.css">
-	</head>
-	
-	<body>
-	<div id="headerbar">
-		<h1>Flatline Automotive Scrap Yard</h1> 
-	</div>
-	<div id="navbar">
-	<ul id="menu">
-		<li><a href="index.html">Home</a></li>
-		<br>
-		<br>
-		<li><a href="Splash.png">WIP</a></li>
-		<br>
-		<br>
-		<li><a href="Splash.png">WIP</a></li>
-	</ul>
-	</div>
-	<div id="mainsection">
-		<p id="bodyheading"><img src="animLogo.gif" width="220" height="180"><br>Give us your crap, we sell it for scrap!</p>
-		<p id="bodytext">Here at Flatline Automotive Scrap Yard™, we are proud to have been serving customers for over <br>50 years.</p>
-		<br>
-		<p id="bodyheading"> Contact Information</p>
-		<ul>
-			<li>Phone Number: (02) 4499 8989</li>
-			<li>Address: 35 North Street, Bangalee Industrial Estate, 2541 NSW</li>
-			<li>Email: Flatline@Domain.com.au</li>
-		</ul>
-		<audio controls autoplay>
-			<source src="WebsiteLQ.wav" type="audio/wav">
-		</audio>
-	</div>
-	<div id="footerbar"><p>Copyright © FASY - Flatline Automotive Scrap Yard™ : 2015</p></div>
-	</body>
+
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="The Meme Team : This is definitely NOT a test, and should be taken 100% seriously">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>The Meme Team</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/nathanvoglsam">View on GitHub</a>
+
+          <h1 id="project_title">The Meme Team</h1>
+          <h2 id="project_tagline">This is definitely NOT a test, and should be taken 100% seriously</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
